set also RGB/BGR LCD order for Skia text rendering (tdf#134275)

Change-Id: I797a851f52d9ba4c18127219b9042348225d14dd